# WS

./: .gitignore  End.odp
Progettini/Password_managment_Ex/: Password_managment_Ex.sln
Progettini/Password_managment_Ex/Password_managment_Ex/: Password_managment_Ex.vcxproj  Password_managment_Ex.vcxproj.filters  admin.cpp  admin.h  main.cpp
WS01/: WS_1.odp
WS01/Benchmarks/: run_benchmarks.py
WS01/Benchmarks/blitz/: CMakeLists.txt  build_windows.bat  main.cpp
WS01/example1/: hello.cpp  hello.py
WS01/example2/: dinamic_type.py  static_type.cpp
WS01/example3/: memory.cpp  memory.py
WS01/example4/: main14.cpp  main17.cpp
WS01/test_ws1/: hello.cpp  test_ws1.sln  test_ws1.vcxproj
WS02/: WS_2.odp  ~$WS_2.odp
WS02/OOP/: CMakeLists.txt  degree_level.cpp  degree_level.h  main.cpp  person.cpp  person.h  pet.cpp  pet.h  role.cpp  role_level.h  student.cpp  student.h  worker.cpp  worker.h
WS02/OOP/nuova_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  oop.sln  oop.vcxproj  oop.vcxproj.filters
WS02/OOP/nuova_build/oop.dir/Debug/: oop.exe.recipe
WS02/OOP/nuova_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
WS02/example1/: main.cpp  time.cpp  time.h
WS03/: WS_3.odp
WS03/OOP/: CMakeLists.txt  person.cpp  student.h
WS03/example1/: CMakeLists.txt  main.cpp  timing.cpp  timing.h
WS03/pointers/: main.cpp
WS03/vpl/: very_pretty_library.h
WS04/: WS_4.odp
WS04/stl/: CMakeLists.txt  main.cpp
WS04/template/: CMakeLists.txt  calculator.h  main.cpp
(+33 files in other folders)
